--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,9 +4,11 @@
   "description": "Kosmos user data value metrics",
   "permissions": [
     "activeTab",
+    "tabs",
     "declarativeContent",
     "storage",
-    "gcm"
+    "gcm",
+    "<all_urls>"
   ],
   "browser_action": {
     "default_popup": "index.html",
@@ -32,7 +34,7 @@
         "js/countly.js",
         "js/init.js"
       ],
-      "run_at": "document_start"
+      "run_at": "document_idle"
     }
   ],
   "content_security_policy": "script-src 'self' https://cdn.jsdelivr.net; object-src 'self'",
